# gxde-dock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Qt6 Migration.md  README.md  build-deb  gxde-dock.pc  rescan_protocols.sh  technology-overview.md  translate_generation.sh  translate_src2ts.sh
cmake/DdeDock/: DdeDockConfig.cmake
cmake/libdbusmenu/: PatchDbusmenuStatic.cmake
debian/: changelog  control  copyright  dde-dock.install  gxde-dock-onboard-plugin.install  gxde-dock.install  rules
fallback_service/: README.md  gxde-dock-fallback-display.service  gxde-dock-fallback-dock.service
fallback_service/display/: __init__.py  __main__.py
fallback_service/dock/: __init__.py  __main__.py  app_entries.py  app_entry.py  app_entry_interface.py  app_entry_menu.py  app_info.py  daemon.py  dock_manager.py  identify_window.py  locale_utils.py  menu.py  plugin_settings.py  sync_config.py  toplevel.py  types.py  util.py  window.py
fallback_service/dock/protocols/alpha_modifier_v1/: wp_alpha_modifier_v1.py
fallback_service/dock/protocols/color_management_v1/: __init__.py  wp_color_management_output_v1.py  wp_color_management_surface_feedback_v1.py  wp_color_management_surface_v1.py  wp_color_manager_v1.py  wp_image_description_creator_icc_v1.py  wp_image_description_creator_params_v1.py  wp_image_description_info_v1.py  wp_image_description_reference_v1.py  wp_image_description_v1.py
fallback_service/dock/protocols/color_representation_v1/: __init__.py  wp_color_representation_manager_v1.py  wp_color_representation_surface_v1.py
fallback_service/dock/protocols/commit_timing_v1/: __init__.py  wp_commit_timer_v1.py  wp_commit_timing_manager_v1.py
fallback_service/dock/protocols/content_type_v1/: wp_content_type_manager_v1.py
fallback_service/dock/protocols/cursor_shape_v1/: wp_cursor_shape_device_v1.py  wp_cursor_shape_manager_v1.py
fallback_service/dock/protocols/drm_lease_v1/: wp_drm_lease_connector_v1.py  wp_drm_lease_request_v1.py  wp_drm_lease_v1.py
frame/: CMakeLists.txt  com.deepin.dde.Dock.service  main.cpp
frame/controller/: dockitemcontroller.cpp  dockitemcontroller.h  dockpluginscontroller.cpp
frame/dbus/: com.deepin.dde.daemon.Dock.xml  dbusclientmanager.cpp  dbusclientmanager.h  dbusdisplay.cpp  dbusdisplay.h  dockdaemoninterface.cpp  dockdaemoninterface.h  dockdbusnames.cpp  dockdbusnames.h  dockentryinterface.cpp  dockentryinterface.h
frame/item/: appitem.cpp  appitem.h  dockitem.cpp  dockitem.h  pluginsitem.cpp  pluginsitem.h  showdesktopitem.cpp  showdesktopitem.h
frame/item/components/: appdrag.cpp  appdrag.h  appsnapshot.cpp  appsnapshot.h  containerwidget.cpp  floatingpreview.cpp  previewcontainer.cpp  previewcontainer.h
frame/panel/: mainpanel.cpp  mainpanel.h
frame/util/: abstractpluginscontroller.cpp  abstractpluginscontroller.h  daemon_fallback.h  dockpopupwindow.cpp  dockpopupwindow.h  docksettings.cpp  docksettings.h  pluginloader.cpp  waylandhelper.h  x11helper.h
frame/wayland/: layershell_styler.cpp  layershell_styler.h  layershellhelper.cpp  layershellhelper.h  xsettings.cpp  xsettings.h
frame/wayland/protocols/: blur-client-protocol.c  blur-client-protocol.h  blur.xml  dde-shell-client-protocol.c  dde-shell-client-protocol.h
frame/window/: mainwindow.cpp  mainwindow.h
frame/xcb/: xcb_misc.cpp
interfaces/: constants.h  pluginproxyinterface.h  pluginsiteminterface.h
plugins/: CMakeLists.txt
plugins/datetime/: CMakeLists.txt  datetimeplugin.cpp  datetimewidget.cpp
plugins/dde-sys-monitor-plugin/: CMakeLists.txt  README.md  build.sh  informationwidget.cpp  informationwidget.h  pluginsettingdialog.cpp  pluginsettingdialog.h  pluginsettingdialog.ui  sysmonitorplugin.cpp  sysmonitorplugin.h
plugins/disk-mount/: CMakeLists.txt  diskcontrolitem.cpp
plugins/keyboard-layout/: CMakeLists.txt  dbusadaptors.h
plugins/network/: CMakeLists.txt
plugins/network/item/: wireditem.cpp  wirelessitem.cpp
plugins/network/item/applet/: accesspointwidget.cpp  accesspointwidget.h  devicecontrolwidget.cpp  wirelesslist.cpp
plugins/notify/: CMakeLists.txt  notifyplugin.cpp  notifyplugin.h  pluginwidget.cpp
plugins/onboard/: CMakeLists.txt  onboarditem.cpp  onboardplugin.cpp
plugins/overlay-warning/: CMakeLists.txt  pluginwidget.cpp
plugins/plugin-guide/: plugins-developer-guide.md
plugins/plugin-guide/home_monitor/: CMakeLists.txt  homemonitorplugin.cpp  homemonitorplugin.h  informationwidget.cpp
plugins/power/: CMakeLists.txt  powerplugin.cpp  powerplugin.h  powerstatuswidget.cpp  powerstatuswidget.h
plugins/shutdown/: CMakeLists.txt  pluginwidget.cpp  shutdownplugin.cpp  shutdownplugin.h
plugins/sound/: CMakeLists.txt  sinkinputwidget.cpp  soundapplet.cpp  sounditem.cpp
plugins/sound/componments/: volumeslider.cpp
plugins/trash/: CMakeLists.txt  popupcontrolwidget.cpp  trashplugin.cpp  trashwidget.cpp
plugins/tray/: CMakeLists.txt  indicatortray.cpp  indicatortraywidget.cpp  snitraywidget.cpp  snitraywidget.h  tray.json  trayplugin.cpp  xembedtraywidget.cpp  xembedtraywidget.h
plugins/tray/fashiontray/: fashiontraycontrolwidget.cpp  fashiontraycontrolwidget.h  fashiontrayitem.cpp  fashiontraywidgetwrapper.cpp  fashiontraywidgetwrapper.h
plugins/tray/fashiontray/containers/: abstractcontainer.cpp  holdcontainer.cpp
plugins/tray/system-trays/: systemtrayitem.cpp  systemtrayitem.h  systemtrayscontroller.cpp
translations/: dde-dock_af.ts  dde-dock_am_ET.ts  dde-dock_ar.ts  dde-dock_az.ts  dde-dock_bg.ts  dde-dock_bn.ts  dde-dock_ca.ts  dde-dock_cs.ts  dde-dock_da.ts  dde-dock_de.ts  dde-dock_el.ts  dde-dock_en_AU.ts  dde-dock_en_GB.ts  dde-dock_eo.ts  dde-dock_es.ts  dde-dock_es_419.ts  dde-dock_et.ts  dde-dock_fa.ts  dde-dock_fi.ts  dde-dock_fi_FI.ts  dde-dock_fr.ts  dde-dock_gl.ts  dde-dock_gl_ES.ts  dde-dock_he.ts  dde-dock_hi_IN.ts  dde-dock_hr.ts  dde-dock_hu.ts  dde-dock_hy.ts  dde-dock_id.ts  dde-dock_it.ts  dde-dock_ja.ts  dde-dock_kn_IN.ts  dde-dock_ko.ts  dde-dock_ku_IQ.ts  dde-dock_lo.ts  dde-dock_lt.ts  dde-dock_ml.ts  dde-dock_mn.ts  dde-dock_ms.ts  dde-dock_nb.ts  (+91 more)
widgets/: tipswidget.cpp
(+77 files in other folders)
